syntax = "proto3";

import "common.proto";

package project_origin.registry.v1;

service RegistryService {
    rpc SendTransactions (SendTransactionsRequest) returns (SubmitTransactionResponse);
    rpc GetStreamTransactions (GetStreamTransactionsRequest) returns (GetStreamTransactionsResponse);
    rpc GetTransactionStatus(GetTransactionStatusRequest) returns (GetTransactionStatusResponse);
    rpc GetTransactionProof (GetTransactionProofRequest) returns (GetTransactionProofResponse);
}

message SendTransactionsRequest {
    // list of transactions to be processed
    repeated Transaction transactions = 1;
}

message SubmitTransactionResponse {}

message GetStreamTransactionsRequest {
    // The id of the transaction to get stream of transactions from.
    project_origin.common.v1.Uuid stream_id = 1;
}

message GetStreamTransactionsResponse {
    // The stream of transactions.
    repeated Transaction transactions = 1;
}

message GetTransactionStatusRequest {
    //Base64 encoded SHA256 hash of the transaction
    string id = 1;
}

message GetTransactionStatusResponse {
    // The state of the transaction.
    TransactionState status = 1;

    // The error message if the transaction is invalid.
    string message = 2;
}

enum TransactionState {
    UNKNOWN = 0;
    PENDING = 1;
    FAILED = 2;
    COMMITTED = 3;
}

message GetTransactionProofRequest {
    //Base64 encoded SHA256 hash of the transaction
    string id = 1;
}

message GetTransactionProofResponse {
    MerkleProof proof = 1;
}

message TransactionHeader {
    // The target stream for which this transaction is intended
    project_origin.common.v1.FederatedStreamId federated_stream_id = 1;

    // The type of the payload, determines how the payload should be
    // deserialized and validated.
    string payload_type = 2;

    // The SHA-512 hash of the serialized payload.
    bytes payload_sha512 = 3;

    // A random string that provides uniqueness for transactions with
    // otherwise identical fields.
    string nonce = 4;
}

// A transaction holds a single atomic change to the state of a stream signed by the owner.
message Transaction {
    // The metadata of the transaction,
    // helps the transaction processor process the transaction.
    TransactionHeader header = 1;

    // The signature of the transaction header.
    bytes header_signature = 2;

    // The serialized payload of the transaction
    bytes payload = 3;
}

message MerkleProof {
    Transaction transaction = 1;
    int32 leaf_index = 2;
    repeated bytes hashes = 3;
    bytes block_id = 4;
}
